# Small-Rust-Programs

./: Cargo.toml  README.md
chess-engine/: Cargo.toml  old_main.rs
chess-engine/engine/: Cargo.toml
chess-engine/frontend/: Cargo.toml
chess-engine/frontend/src/: data.rs  draw.rs  events.rs  main.rs  text.rs  utils.rs
chess-engine/resources/: credits.txt  settings.txt
chess-engine/src/: engine.rs  main.rs  utils.rs
clear-all-targets/: Cargo.toml
clear-all-targets/src/: main.rs
data-packing-tests/: Cargo.toml
data-packing-tests/src/: main.rs
folder_diff/: Cargo.toml
folder_diff/src/: main.rs
fun_malware/: Cargo.toml
fun_malware/src/: main.rs
glsl_counter/: Cargo.toml
glsl_counter/src/: main.rs
langtons-ant-like/: Cargo.toml
langtons-ant-like/src/: ant.rs  custom_impls.rs  main.rs  render.rs  update.rs  utils.rs
language_battles/: Cargo.toml  input.lnk  input_backup.txt  input_backup_2.txt  input_backup_3.txt
language_battles/src/: fns.rs  main.rs
minesweeper-2/: Cargo.toml
minesweeper-2/src/: input.rs  main.rs
minesweeper_clone/: Cargo.toml
minesweeper_clone/src/: errors.rs  helpers.rs  input.rs  main.rs
pi-approx/: Cargo.toml
pi-approx/src/: main.rs
point-distribution/: Cargo.toml
remove-empty-folders/: Cargo.toml
search-fs/: Cargo.toml
search-fs/src/: main.rs
simple-gambling/: Cargo.toml
snake_clone/: .gitignore  Cargo.toml
speed_testing/: Cargo.toml
src/: helpers.rs  input.rs  main.rs
stacker_clone/: Cargo.toml
standard-peg-solitair/: Cargo.toml  readme.md
tick-tak-toe/: Cargo.toml  README.md
(+45 files in other folders)
