[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
default-run = "frontend"

[dependencies]
shared = { path = "../shared" }
engine = { path = "../engine" }
anyhow = "1.0.99"
sdl3 = { version = "0.16.2", features = ["build-from-source"] }
easy-sdl3-text = "0.3.3"
ab_glyph = "0.2.31"
image = "0.25.6"
rodio = "0.21.1"
rfd = { version = "0.15.4", default-features = false, features = ["gtk3"] }
rayon = "1.11.0"
easy-configuration-format = "0.2.3"
